reformat code